--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 REACT_APP_SERVICE_ID = service_b6qfktk
 REACT_APP_SERVICE_TEMPLATE_ID = template_rbitrh6
 REACT_APP_PUBLIC_KEY = 9XKSNGLphYebEM2io
+REACT_APP_STEAM_LINK = https://store.steampowered.com/app/2286560/Battle_of_Guardians/
+REACT_APP_GITHUB_LINK = https://github.com/nisamarwa/Mini-Game/tree/master/Tetromino
+REACT_APP_DOWNLOAD_LINK = https://drive.google.com/file/d/1ONU0pnBRykc1OPJY-JTAl9Sx2vWip7Xt/view?usp=drive_link
